App - Allowing hierarchical phases
